bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:5: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (b*a > 0 && negative == true){
       ^