bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  
  if (b*a<0 && negative == false){
    return true;}
  else if (b*a > 0 && negative == true){
    return true;
  }
    
}
